feat:完善登录，注册和JWT签发
