# docs/swagger.json
@@ -9,6 +9,25 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/getuser": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户"
+                ],
+                "summary": "获取用户列表",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/index": {
             "get": {
                 "description": "欢迎页",
@@ -113,9 +132,6 @@
         "api.RegisterRequest": {
             "type": "object",
             "properties": {
-                "email": {
-                    "type": "string"
-                },
                 "name": {
                     "type": "string"
                 },
